color setup in vanilla css

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <div class="swiper-slide flex items-center">
             <div class="w-full sm:w-1/2 flex flex-col sm:block">
               <div class="text-container text-center sm:text-left">
-                <div class="title text-3xl font-bold text-primary-color">
+                <div class="title text-3xl font-bold text-primary-color-dark">
                   New World Explore
                 </div>
                 <div class="subtitle text-6xl font-bold max-w-lg my-5">
@@ -60,7 +60,7 @@
                 </div>
               </div>
               <button
-                class="text-white bg-primary-color hover:bg-secondary-color transition-all duration-700 px-10 py-5 mt-5 shadow-xl rounded-l-full rounded-r-full"
+                class="text-white bg-primary-color-dark transition-all duration-700 px-10 py-5 mt-5 shadow-xl rounded-l-full rounded-r-full"
               >
                 Explore Now
               </button>
@@ -76,7 +76,7 @@
           <div class="swiper-slide flex items-center">
             <div class="w-full sm:w-1/2 flex flex-col sm:block">
               <div class="text-container text-center sm:text-left">
-                <div class="title text-3xl font-bold text-primary-color">
+                <div class="title text-3xl font-bold text-primary-color-dark">
                   Discover best life !
                 </div>
                 <div class="subtitle text-6xl font-bold max-w-lg my-5">
@@ -84,7 +84,7 @@
                 </div>
               </div>
               <button
-                class="text-white bg-primary-color hover:bg-secondary-color transition-all duration-700 px-10 py-5 mt-5 shadow-xl rounded-l-full rounded-r-full"
+                class="text-white bg-primary-color-dark transition-all duration-700 px-10 py-5 mt-5 shadow-xl rounded-l-full rounded-r-full"
               >
                 Explore Now
               </button>
@@ -100,7 +100,7 @@
           <div class="swiper-slide flex items-center">
             <div class="w-full sm:w-1/2 flex flex-col sm:block">
               <div class="text-container text-center sm:text-left">
-                <div class="title text-3xl font-bold text-primary-color">
+                <div class="title text-3xl font-bold text-primary-color-dark">
                   Find new purpose
                 </div>
                 <div class="subtitle text-6xl font-bold max-w-lg my-5">
@@ -108,7 +108,7 @@
                 </div>
               </div>
               <button
-                class="text-white bg-primary-color hover:bg-secondary-color transition-all duration-700 px-10 py-5 mt-5 shadow-xl rounded-l-full rounded-r-full"
+                class="text-white bg-primary-color-dark transition-all duration-700 px-10 py-5 mt-5 shadow-xl rounded-l-full rounded-r-full"
               >
                 Explore Now
               </button>
@@ -135,18 +135,16 @@
           type="radio"
           name="my_tabs_2"
           role="tab"
-          class="tab peer peer-checked:bg-secondary-color"
+          class="tab"
           aria-label="Resorts"
           checked
         />
 
         <div
           role="tabpanel"
-          class="tab-content bg-custom-color-1 border-base-300 rounded-box p-6"
+          class="tab-content bg-primary-color-light border-base-300 rounded-box p-6"
         >
-          <form
-            class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 w-full max-w-6xl"
-          >
+          <form class="shadow-md rounded px-8 pt-6 pb-8 mb-4 w-full max-w-6xl">
             <div
               class="flex flex-col md:flex-row md:space-x-4 space-y-3 md:space-y-0 mb-4"
             >
@@ -221,7 +219,7 @@
 
             <div class="flex items-center justify-center">
               <button
-                class="text-white bg-primary-color hover:bg-secondary-color transition-all duration-700 px-10 py-5 mt-5 shadow-xl rounded-l-full rounded-r-full"
+                class="text-white bg-primary-color-dark transition-all duration-700 px-10 py-5 mt-5 shadow-xl rounded-l-full rounded-r-full"
               >
                 Search Now
               </button>
@@ -234,15 +232,14 @@
           role="tab"
           class="tab"
           aria-label="Rents"
-          checked
         />
 
         <div
           role="tabpanel"
-          class="tab-content bg-custom-color-1 border-base-300 rounded-box p-6"
+          class="tab-content bg-primary-color-light border-base-300 rounded-box p-6"
         >
           <form
-            class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 w-full max-w-6xl"
+            class="bg-primary-color-light shadow-md rounded px-8 pt-6 pb-8 mb-4 w-full max-w-6xl"
           >
             <div
               class="flex flex-col md:flex-row md:space-x-4 space-y-3 md:space-y-0 mb-4"
@@ -318,7 +315,7 @@
 
             <div class="flex items-center justify-center">
               <button
-                class="text-white bg-primary-color hover:bg-secondary-color transition-all duration-700 px-10 py-5 mt-5 shadow-xl rounded-l-full rounded-r-full"
+                class="text-white bg-primary-color-dark transition-all duration-700 px-10 py-5 mt-5 shadow-xl rounded-l-full rounded-r-full"
               >
                 Search Now
               </button>
@@ -331,15 +328,14 @@
           role="tab"
           class="tab"
           aria-label="Planes"
-          checked
         />
 
         <div
           role="tabpanel"
-          class="tab-content bg-custom-color-1 border-base-300 rounded-box p-6"
+          class="tab-content bg-primary-color-light border-base-300 rounded-box p-6"
         >
           <form
-            class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 w-full max-w-6xl"
+            class="bg-primary-color-light shadow-md rounded px-8 pt-6 pb-8 mb-4 w-full max-w-6xl"
           >
             <div
               class="flex flex-col md:flex-row md:space-x-4 space-y-3 md:space-y-0 mb-4"
@@ -415,7 +411,7 @@
 
             <div class="flex items-center justify-center">
               <button
-                class="text-white bg-primary-color hover:bg-secondary-color transition-all duration-700 px-10 py-5 mt-5 shadow-xl rounded-l-full rounded-r-full"
+                class="text-white bg-primary-color-dark transition-all duration-700 px-10 py-5 mt-5 shadow-xl rounded-l-full rounded-r-full"
               >
                 Search Now
               </button>
@@ -428,15 +424,14 @@
           role="tab"
           class="tab"
           aria-label="Tours"
-          checked
         />
 
         <div
           role="tabpanel"
-          class="tab-content bg-custom-color-1 border-base-300 rounded-box p-6"
+          class="tab-content bg-primary-color-light border-base-300 rounded-box p-6"
         >
           <form
-            class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 w-full max-w-6xl"
+            class="bg-primary-color-light shadow-md rounded px-8 pt-6 pb-8 mb-4 w-full max-w-6xl"
           >
             <div
               class="flex flex-col md:flex-row md:space-x-4 space-y-3 md:space-y-0 mb-4"
@@ -512,7 +507,7 @@
 
             <div class="flex items-center justify-center">
               <button
-                class="text-white bg-primary-color hover:bg-secondary-color transition-all duration-700 px-10 py-5 mt-5 shadow-xl rounded-l-full rounded-r-full"
+                class="text-white bg-primary-color-dark transition-all duration-700 px-10 py-5 mt-5 shadow-xl rounded-l-full rounded-r-full"
               >
                 Search Now
               </button>
@@ -525,15 +520,14 @@
           role="tab"
           class="tab"
           aria-label="Works"
-          checked
         />
 
         <div
           role="tabpanel"
-          class="tab-content bg-custom-color-1 border-base-300 rounded-box p-6"
+          class="tab-content bg-primary-color-light border-base-300 rounded-box p-6"
         >
           <form
-            class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 w-full max-w-6xl"
+            class="bg-primary-color-light shadow-md rounded px-8 pt-6 pb-8 mb-4 w-full max-w-6xl"
           >
             <div
               class="flex flex-col md:flex-row md:space-x-4 space-y-3 md:space-y-0 mb-4"
@@ -609,7 +603,7 @@
 
             <div class="flex items-center justify-center">
               <button
-                class="text-white bg-primary-color hover:bg-secondary-color transition-all duration-700 px-10 py-5 mt-5 shadow-xl rounded-l-full rounded-r-full"
+                class="text-white bg-primary-color-dark transition-all duration-700 px-10 py-5 mt-5 shadow-xl rounded-l-full rounded-r-full"
               >
                 Search Now
               </button>
@@ -622,15 +616,14 @@
           role="tab"
           class="tab"
           aria-label="others"
-          checked
         />
 
         <div
           role="tabpanel"
-          class="tab-content bg-custom-color-1 border-base-300 rounded-box p-6"
+          class="tab-content bg-primary-color-light border-base-300 rounded-box p-6"
         >
           <form
-            class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 w-full max-w-6xl"
+            class="bg-primary-color-light shadow-md rounded px-8 pt-6 pb-8 mb-4 w-full max-w-6xl"
           >
             <div
               class="flex flex-col md:flex-row md:space-x-4 space-y-3 md:space-y-0 mb-4"
@@ -706,7 +699,7 @@
 
             <div class="flex items-center justify-center">
               <button
-                class="text-white bg-primary-color hover:bg-secondary-color transition-all duration-700 px-10 py-5 mt-5 shadow-xl rounded-l-full rounded-r-full"
+                class="text-white bg-primary-color-dark transition-all duration-700 px-10 py-5 mt-5 shadow-xl rounded-l-full rounded-r-full"
               >
                 Search Now
               </button>
