upto form works

--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
     <link rel="stylesheet" href="style-custom.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
-    <header class="max-w-6xl w-full mx-auto flex justify-between items-center">
+  <body class="bg-gradient-to-b from-teal-200">
+    <header
+      class="max-w-6xl w-full mx-auto flex justify-between items-center bg-white rounded-full"
+    >
       <div>
         <a href="./">
           <img class="w-44 p-1" src="./images/nt-logo.png" alt="logo" />
@@ -56,7 +58,7 @@
                   New World Explore
                 </div>
                 <div class="subtitle text-6xl font-bold max-w-lg my-5">
-                  Final Journey to enjoy life!
+                  Final Journey it is!
                 </div>
               </div>
               <button
@@ -91,7 +93,7 @@
             </div>
             <div class="w-full sm:w-1/2">
               <img
-                class="w-[600px] h-[400px] hidden sm:block"
+                class="w-[500px] h-[400px] hidden sm:block"
                 src="images/boat.svg"
                 alt="plane"
               />
@@ -101,10 +103,10 @@
             <div class="w-full sm:w-1/2 flex flex-col sm:block">
               <div class="text-container text-center sm:text-left">
                 <div class="title text-3xl font-bold text-primary-color-dark">
-                  Find new purpose
+                  Find new purpose in life
                 </div>
                 <div class="subtitle text-6xl font-bold max-w-lg my-5">
-                  Find happiness in life
+                  Find meaning in life
                 </div>
               </div>
               <button
@@ -129,13 +131,13 @@
     </section>
 
     <!-- form section -->
-    <section class="max-w-6xl w-full mx-auto my-5">
+    <section class="max-w-6xl w-full mx-auto py-24">
       <div role="tablist" class="tabs tabs-lifted grid grid-cols-6">
         <input
           type="radio"
           name="my_tabs_2"
           role="tab"
-          class="tab"
+          class="tab h-24 bg-white"
           aria-label="Resorts"
           checked
         />
@@ -144,7 +146,7 @@
           role="tabpanel"
           class="tab-content bg-primary-color-light border-base-300 rounded-box p-6"
         >
-          <form class="shadow-md rounded px-8 pt-6 pb-8 mb-4 w-full max-w-6xl">
+          <form class="rounded px-8 pt-6 pb-8 mb-4 w-full max-w-6xl">
             <div
               class="flex flex-col md:flex-row md:space-x-4 space-y-3 md:space-y-0 mb-4"
             >
@@ -230,7 +232,7 @@
           type="radio"
           name="my_tabs_2"
           role="tab"
-          class="tab"
+          class="tab h-24 bg-white"
           aria-label="Rents"
         />
 
@@ -239,7 +241,7 @@
           class="tab-content bg-primary-color-light border-base-300 rounded-box p-6"
         >
           <form
-            class="bg-primary-color-light shadow-md rounded px-8 pt-6 pb-8 mb-4 w-full max-w-6xl"
+            class="bg-primary-color-light rounded px-8 pt-6 pb-8 mb-4 w-full max-w-6xl"
           >
             <div
               class="flex flex-col md:flex-row md:space-x-4 space-y-3 md:space-y-0 mb-4"
@@ -326,7 +328,7 @@
           type="radio"
           name="my_tabs_2"
           role="tab"
-          class="tab"
+          class="tab h-24 bg-white"
           aria-label="Planes"
         />
 
@@ -335,7 +337,7 @@
           class="tab-content bg-primary-color-light border-base-300 rounded-box p-6"
         >
           <form
-            class="bg-primary-color-light shadow-md rounded px-8 pt-6 pb-8 mb-4 w-full max-w-6xl"
+            class="bg-primary-color-light rounded px-8 pt-6 pb-8 mb-4 w-full max-w-6xl"
           >
             <div
               class="flex flex-col md:flex-row md:space-x-4 space-y-3 md:space-y-0 mb-4"
@@ -422,7 +424,7 @@
           type="radio"
           name="my_tabs_2"
           role="tab"
-          class="tab"
+          class="tab h-24 bg-white"
           aria-label="Tours"
         />
 
@@ -431,7 +433,7 @@
           class="tab-content bg-primary-color-light border-base-300 rounded-box p-6"
         >
           <form
-            class="bg-primary-color-light shadow-md rounded px-8 pt-6 pb-8 mb-4 w-full max-w-6xl"
+            class="bg-primary-color-light rounded px-8 pt-6 pb-8 mb-4 w-full max-w-6xl"
           >
             <div
               class="flex flex-col md:flex-row md:space-x-4 space-y-3 md:space-y-0 mb-4"
@@ -518,7 +520,7 @@
           type="radio"
           name="my_tabs_2"
           role="tab"
-          class="tab"
+          class="tab h-24 bg-white"
           aria-label="Works"
         />
 
@@ -527,7 +529,7 @@
           class="tab-content bg-primary-color-light border-base-300 rounded-box p-6"
         >
           <form
-            class="bg-primary-color-light shadow-md rounded px-8 pt-6 pb-8 mb-4 w-full max-w-6xl"
+            class="bg-primary-color-light rounded px-8 pt-6 pb-8 mb-4 w-full max-w-6xl"
           >
             <div
               class="flex flex-col md:flex-row md:space-x-4 space-y-3 md:space-y-0 mb-4"
@@ -614,7 +616,7 @@
           type="radio"
           name="my_tabs_2"
           role="tab"
-          class="tab"
+          class="tab h-24 bg-white"
           aria-label="others"
         />
 
@@ -623,7 +625,7 @@
           class="tab-content bg-primary-color-light border-base-300 rounded-box p-6"
         >
           <form
-            class="bg-primary-color-light shadow-md rounded px-8 pt-6 pb-8 mb-4 w-full max-w-6xl"
+            class="bg-primary-color-light rounded px-8 pt-6 pb-8 mb-4 w-full max-w-6xl"
           >
             <div
               class="flex flex-col md:flex-row md:space-x-4 space-y-3 md:space-y-0 mb-4"
@@ -709,12 +711,12 @@
       </div>
     </section>
     <!-- provide section -->
-    <section class="bg-gradient-to-b from-teal-200 max-w-6xl w-full mx-auto">
-      <h2 class="text-secondary-color text-2xl font-bold mt-44">
+    <section class="max-w-6xl w-full mx-auto">
+      <h2 class="text-secondary-color text-2xl font-bold text-secondary-color">
         OUR SERVICES
       </h2>
       <div class="flex items-center justify-center">
-        <h1>TOP VALUES FOR YOU</h1>
+        <h1 class="text-4xl font-bold">TOP VALUES FOR YOU</h1>
         <img class="w-64" src="images/baloon.png" alt="" />
       </div>
       <div class="flex flex-wrap justify-center">
@@ -752,10 +754,10 @@
         },
       });
     </script>
-    <script
+    <!-- <script
       src="https://kit.fontawesome.com/c5b8b41db0.js"
       crossorigin="anonymous"
-    ></script>
+    ></script> -->
     <!-- navbar -->
   </body>
 </html>
