--- a/index.html
+++ b/index.html
@@ -715,13 +715,13 @@
       <h2 class="text-secondary-color text-2xl font-bold text-secondary-color">
         OUR SERVICES
       </h2>
-      <div class="flex items-center justify-center">
+      <div class="flex items-center justify-evenly">
         <h1 class="text-4xl font-bold">TOP VALUES FOR YOU</h1>
-        <img class="w-64" src="images/baloon.png" alt="" />
+        <img class="w-64" src="images/friend.svg" alt="" />
       </div>
-      <div class="flex flex-wrap justify-center">
-        <div class="">
-          <img class="w-64" src="images/baloon.png" alt="" />
+      <div class="flex flex-wrap justify-center my-24">
+        <div class="bg-teal-100 p-10">
+          <img class="w-64" src="images/outdoor.svg" alt="" />
           <h3 class="text-center font-bold text-2xl mb-5">Lots of Choices</h3>
           <p class="w-64 text-center">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam
