--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@
         <img class="w-64" src="images/friend.svg" alt="" />
       </div>
       <div class="flex flex-wrap justify-center my-24">
-        <div class="bg-teal-100 p-10">
+        <div class="bg-teal-100 hover:bg-primary-color-light p-10">
           <img class="w-64" src="images/outdoor.svg" alt="" />
           <h3 class="text-center font-bold text-2xl mb-5">Lots of Choices</h3>
           <p class="w-64 text-center">
