--- a/index.html
+++ b/index.html
@@ -719,16 +719,39 @@
         <h1 class="text-4xl font-bold">TOP VALUES FOR YOU</h1>
         <img class="w-64" src="images/friend.svg" alt="" />
       </div>
-      <div class="flex flex-wrap justify-center my-24">
-        <div class="bg-teal-100 hover:bg-primary-color-light p-10">
+      <div class="flex flex-wrap gap-5 justify-center my-24">
+        <div
+          class="group bg-gradient-to-b from-teal-100 hover:bg-teal-200 rounded-2xl p-10"
+        >
           <img class="w-64" src="images/outdoor.svg" alt="" />
-          <h3 class="text-center font-bold text-2xl mb-5">Lots of Choices</h3>
-          <p class="w-64 text-center">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam
-            laboriosam numquam aliquid consequatur! Id ut molestiae aliquid
-            sapiente quasi assumenda modi, nulla earum asperiores illum, nam,
-            dolorem aperiam nihil expedita!
-          </p>
+          <h3
+            class="group-hover:text-primary-color-dark text-center font-bold text-2xl mb-5"
+          >
+            Lots of Choices
+          </h3>
+          <p class="w-64 text-center">Lorem</p>
+        </div>
+        <div
+          class="group bg-gradient-to-b from-teal-100 hover:bg-teal-200 rounded-2xl p-10"
+        >
+          <img class="w-64" src="images/mountain.svg" alt="" />
+          <h3
+            class="group-hover:text-primary-color-dark text-center font-bold text-2xl mb-5"
+          >
+            Lots of Choices
+          </h3>
+          <p class="w-64 text-center">Lorem</p>
+        </div>
+        <div
+          class="group bg-gradient-to-b from-teal-100 hover:bg-teal-200 rounded-2xl p-10"
+        >
+          <img class="w-64" src="images/tree.svg" alt="" />
+          <h3
+            class="group-hover:text-primary-color-dark text-center font-bold text-2xl mb-5"
+          >
+            Lots of Choices
+          </h3>
+          <p class="w-64 text-center">Lorem</p>
         </div>
       </div>
     </section>
