--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </header>
 
     <!-- swiper slider -->
-    <section>
+    <section class="max-w-6xl w-full mx-auto">
       <div class="swiper mySwiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide flex items-center">
@@ -712,9 +712,7 @@
     </section>
     <!-- provide section -->
     <section class="max-w-6xl w-full mx-auto">
-      <h2 class="text-secondary-color text-2xl font-bold text-secondary-color">
-        OUR SERVICES
-      </h2>
+      <h2 class="text-2xl font-bold text-secondary-color">OUR SERVICES</h2>
       <div class="flex items-center justify-evenly">
         <h1 class="text-4xl font-bold">TOP VALUES FOR YOU</h1>
         <img class="w-64" src="images/friend.svg" alt="" />
@@ -732,7 +730,7 @@
           <p class="w-64 text-center">Lorem</p>
         </div>
         <div
-          class="group bg-gradient-to-b from-teal-100 hover:bg-teal-200 rounded-2xl p-10"
+          class="mt-5 group bg-gradient-to-b from-teal-100 hover:bg-teal-200 rounded-2xl p-10"
         >
           <img class="w-64" src="images/mountain.svg" alt="" />
           <h3
@@ -743,7 +741,7 @@
           <p class="w-64 text-center">Lorem</p>
         </div>
         <div
-          class="group bg-gradient-to-b from-teal-100 hover:bg-teal-200 rounded-2xl p-10"
+          class="mt-10 group bg-gradient-to-b from-teal-100 hover:bg-teal-200 rounded-2xl p-10"
         >
           <img class="w-64" src="images/tree.svg" alt="" />
           <h3
@@ -755,6 +753,9 @@
         </div>
       </div>
     </section>
+
+    <!-- carousel section -->
+    <section class="max-w-6xl w-full mx-auto"></section>
 
     <!-- <script type="module" src="/main.js"></script> -->
 
