added bg to carousel

--- a/index.html
+++ b/index.html
@@ -755,7 +755,16 @@
     </section>
 
     <!-- carousel section -->
-    <section class="max-w-6xl w-full mx-auto">
+    <section class="w-full mx-auto bg-[url('/images/lake.jpg')] bg-cover">
+      <div class="text-center pt-20">
+        <h3 class="text-secondary-color font-bold text-2xl">
+          EXPLORE WONDERFUL EXPERIENCE
+        </h3>
+        <h1 class="text-white text-5xl font-bold mt-5 mb-24">
+          Visit Popular Destinations <br />
+          in the World
+        </h1>
+      </div>
       <div class="swiper swiper2">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
