2nd slider problem

--- a/index.html
+++ b/index.html
@@ -768,10 +768,11 @@
       <div class="swiper swiper2">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
+            <h3 class="text-2xl">Argentina</h3>
             <img src="images/dive.jpg" alt="" />
           </div>
           <div class="swiper-slide">
-            <img src="images/lake.jpg" alt="" />
+            <img src="images/pathtosea.jpg" alt="" />
           </div>
           <div class="swiper-slide">
             <img src="images/lighthouse.jpg" alt="" />
