--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/images/nt-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Natural Travel</title>
-    <!-- <link
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    /> -->
+    />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
@@ -767,7 +767,9 @@
       </div>
       <div class="max-w-6xl swiper swiper2">
         <div class="swiper-wrapper">
-          <div class="swiper-slide swiper2">
+          <div class="swiper-slide swiper2 p-5 rounded-lg">
+            <i class="fa-solid fa-location-dot" style="color: #63e6be"></i>
+            <span>Argentina it is</span>
             <h3 class="text-2xl">Argentina</h3>
             <img src="images/dive.jpg" alt="" />
           </div>
@@ -819,10 +821,10 @@
       });
     </script>
 
-    <!-- <script
+    <script
       src="https://kit.fontawesome.com/c5b8b41db0.js"
       crossorigin="anonymous"
-    ></script> -->
+    ></script>
     <!-- navbar -->
   </body>
 </html>
