2nd slider work in p

--- a/index.html
+++ b/index.html
@@ -767,11 +767,34 @@
       </div>
       <div class="max-w-6xl swiper swiper2">
         <div class="swiper-wrapper">
-          <div class="swiper-slide swiper2 p-5 rounded-lg">
-            <i class="fa-solid fa-location-dot" style="color: #63e6be"></i>
-            <span>Argentina it is</span>
-            <h3 class="text-2xl">Argentina</h3>
-            <img src="images/dive.jpg" alt="" />
+          <div class="swiper-slide swiper2 rounded-lg group">
+            <div class="group-hover:bg-gradient-to-b from-teal-100 p-5">
+              <i
+                class="fa-solid fa-location-dot text-secondary-color bg-orange-200 p-2 rounded-full"
+              ></i>
+              <span class="text-gray-400">Buenos Aires, Argentina </span>
+              <h3 class="text-2xl font-bold">Argentina</h3>
+              <img src="images/dive.jpg" alt="" />
+              <div class="text-gray-400 flex justify-around items-center mt-1">
+                <p>10 activities</p>
+                <div>
+                  <i class="fa-solid fa-map-location-dot"></i> 12 places
+                </div>
+                <div><i class="fa-solid fa-calendar-days"></i> 1 week</div>
+              </div>
+              <hr class="border" />
+              <div class="flex items-center mt-3 justify-around">
+                <p>
+                  <span class="font-bold">$545 </span>
+                  <span class="text-gray-400"> /Person </span>
+                </p>
+                <button
+                  class="text-white bg-primary-color-dark transition-all duration-700 px-5 py-2 shadow-xl rounded-l-full rounded-r-full"
+                >
+                  View availability
+                </button>
+              </div>
+            </div>
           </div>
           <div class="swiper-slide swiper2">
             <img src="images/pathtosea.jpg" alt="" />
