2nd slider done

--- a/index.html
+++ b/index.html
@@ -768,13 +768,19 @@
       <div class="max-w-6xl swiper swiper2">
         <div class="swiper-wrapper">
           <div class="swiper-slide swiper2 rounded-lg group">
-            <div class="group-hover:bg-gradient-to-b from-teal-100 p-5">
+            <div
+              class="group-hover:bg-gradient-to-b from-teal-100 p-5 rounded-lg"
+            >
               <i
-                class="fa-solid fa-location-dot text-secondary-color bg-orange-200 p-2 rounded-full"
+                class="fa-solid fa-location-dot text-secondary-color bg-orange-100 p-2 rounded-full"
               ></i>
               <span class="text-gray-400">Buenos Aires, Argentina </span>
-              <h3 class="text-2xl font-bold">Argentina</h3>
-              <img src="images/dive.jpg" alt="" />
+              <h3 class="text-2xl font-bold my-2">Argentina</h3>
+              <img
+                class="hover:scale-x-105 transition-all duration-[3000ms] w-80 h-60"
+                src="images/dive.jpg"
+                alt=""
+              />
               <div class="text-gray-400 flex justify-around items-center mt-1">
                 <p>10 activities</p>
                 <div>
@@ -789,27 +795,187 @@
                   <span class="text-gray-400"> /Person </span>
                 </p>
                 <button
-                  class="text-white bg-primary-color-dark transition-all duration-700 px-5 py-2 shadow-xl rounded-l-full rounded-r-full"
+                  class="text-white bg-gray-400 group-hover:bg-primary-color-dark transition-all duration-700 px-5 py-2 shadow-xl rounded-l-full rounded-r-full"
                 >
                   View availability
                 </button>
               </div>
             </div>
           </div>
-          <div class="swiper-slide swiper2">
-            <img src="images/pathtosea.jpg" alt="" />
+          <div class="swiper-slide swiper2 rounded-lg group">
+            <div
+              class="group-hover:bg-gradient-to-b from-teal-100 p-5 rounded-lg"
+            >
+              <i
+                class="fa-solid fa-location-dot text-secondary-color bg-orange-100 p-2 rounded-full"
+              ></i>
+              <span class="text-gray-400">Light, House </span>
+              <h3 class="text-2xl font-bold my-2">Lighthouse</h3>
+              <img
+                class="hover:scale-x-105 transition-all duration-[3000ms] w-80 h-60"
+                src="images/lighthouse.jpg"
+                alt=""
+              />
+              <div class="text-gray-400 flex justify-around items-center mt-1">
+                <p>10 activities</p>
+                <div>
+                  <i class="fa-solid fa-map-location-dot"></i> 12 places
+                </div>
+                <div><i class="fa-solid fa-calendar-days"></i> 1 week</div>
+              </div>
+              <hr class="border" />
+              <div class="flex items-center mt-3 justify-around">
+                <p>
+                  <span class="font-bold">$545 </span>
+                  <span class="text-gray-400"> /Person </span>
+                </p>
+                <button
+                  class="text-white bg-gray-400 group-hover:bg-primary-color-dark transition-all duration-700 px-5 py-2 shadow-xl rounded-l-full rounded-r-full"
+                >
+                  View availability
+                </button>
+              </div>
+            </div>
           </div>
-          <div class="swiper-slide swiper2">
-            <img src="images/lighthouse.jpg" alt="" />
+          <div class="swiper-slide swiper2 rounded-lg group">
+            <div
+              class="group-hover:bg-gradient-to-b from-teal-100 p-5 rounded-lg"
+            >
+              <i
+                class="fa-solid fa-location-dot text-secondary-color bg-orange-100 p-2 rounded-full"
+              ></i>
+              <span class="text-gray-400">Green, Forest </span>
+              <h3 class="text-2xl font-bold my-2">Green Forest</h3>
+              <img
+                class="hover:scale-x-105 transition-all duration-[3000ms] w-80 h-60"
+                src="images/forest.jpg"
+                alt=""
+              />
+              <div class="text-gray-400 flex justify-around items-center mt-1">
+                <p>10 activities</p>
+                <div>
+                  <i class="fa-solid fa-map-location-dot"></i> 12 places
+                </div>
+                <div><i class="fa-solid fa-calendar-days"></i> 1 week</div>
+              </div>
+              <hr class="border" />
+              <div class="flex items-center mt-3 justify-around">
+                <p>
+                  <span class="font-bold">$545 </span>
+                  <span class="text-gray-400"> /Person </span>
+                </p>
+                <button
+                  class="text-white bg-gray-400 group-hover:bg-primary-color-dark transition-all duration-700 px-5 py-2 shadow-xl rounded-l-full rounded-r-full"
+                >
+                  View availability
+                </button>
+              </div>
+            </div>
           </div>
-          <div class="swiper-slide swiper2">
-            <img src="images/mountain2.jpg" alt="" />
+          <div class="swiper-slide swiper2 rounded-lg group">
+            <div
+              class="group-hover:bg-gradient-to-b from-teal-100 p-5 rounded-lg"
+            >
+              <i
+                class="fa-solid fa-location-dot text-secondary-color bg-orange-100 p-2 rounded-full"
+              ></i>
+              <span class="text-gray-400">Lake, view </span>
+              <h3 class="text-2xl font-bold my-2">Lake view</h3>
+              <img
+                class="hover:scale-x-105 transition-all duration-[3000ms] w-80 h-60"
+                src="images/lake.jpg"
+                alt=""
+              />
+              <div class="text-gray-400 flex justify-around items-center mt-1">
+                <p>10 activities</p>
+                <div>
+                  <i class="fa-solid fa-map-location-dot"></i> 12 places
+                </div>
+                <div><i class="fa-solid fa-calendar-days"></i> 1 week</div>
+              </div>
+              <hr class="border" />
+              <div class="flex items-center mt-3 justify-around">
+                <p>
+                  <span class="font-bold">$545 </span>
+                  <span class="text-gray-400"> /Person </span>
+                </p>
+                <button
+                  class="text-white bg-gray-400 group-hover:bg-primary-color-dark transition-all duration-700 px-5 py-2 shadow-xl rounded-l-full rounded-r-full"
+                >
+                  View availability
+                </button>
+              </div>
+            </div>
           </div>
-          <div class="swiper-slide swiper2">
-            <img src="images/mountain3.jpg" alt="" />
+          <div class="swiper-slide swiper2 rounded-lg group">
+            <div
+              class="group-hover:bg-gradient-to-b from-teal-100 p-5 rounded-lg"
+            >
+              <i
+                class="fa-solid fa-location-dot text-secondary-color bg-orange-100 p-2 rounded-full"
+              ></i>
+              <span class="text-gray-400">sun , rise </span>
+              <h3 class="text-2xl font-bold my-2">Sunrise</h3>
+              <img
+                class="hover:scale-x-105 transition-all duration-[3000ms] w-80 h-60"
+                src="images/sunrise.jpg"
+                alt=""
+              />
+              <div class="text-gray-400 flex justify-around items-center mt-1">
+                <p>10 activities</p>
+                <div>
+                  <i class="fa-solid fa-map-location-dot"></i> 12 places
+                </div>
+                <div><i class="fa-solid fa-calendar-days"></i> 1 week</div>
+              </div>
+              <hr class="border" />
+              <div class="flex items-center mt-3 justify-around">
+                <p>
+                  <span class="font-bold">$545 </span>
+                  <span class="text-gray-400"> /Person </span>
+                </p>
+                <button
+                  class="text-white bg-gray-400 group-hover:bg-primary-color-dark transition-all duration-700 px-5 py-2 shadow-xl rounded-l-full rounded-r-full"
+                >
+                  View availability
+                </button>
+              </div>
+            </div>
           </div>
-          <div class="swiper-slide swiper2">
-            <img src="images/pathtosea.jpg" alt="" />
+          <div class="swiper-slide swiper2 rounded-lg group">
+            <div
+              class="group-hover:bg-gradient-to-b from-teal-100 p-5 rounded-lg"
+            >
+              <i
+                class="fa-solid fa-location-dot text-secondary-color bg-orange-100 p-2 rounded-full"
+              ></i>
+              <span class="text-gray-400">Sun, set </span>
+              <h3 class="text-2xl font-bold my-2">Sunset</h3>
+              <img
+                class="hover:scale-x-105 transition-all duration-[3000ms] w-80 h-60"
+                src="images/sunset.jpg"
+                alt=""
+              />
+              <div class="text-gray-400 flex justify-around items-center mt-1">
+                <p>10 activities</p>
+                <div>
+                  <i class="fa-solid fa-map-location-dot"></i> 12 places
+                </div>
+                <div><i class="fa-solid fa-calendar-days"></i> 1 week</div>
+              </div>
+              <hr class="border" />
+              <div class="flex items-center mt-3 justify-around">
+                <p>
+                  <span class="font-bold">$545 </span>
+                  <span class="text-gray-400"> /Person </span>
+                </p>
+                <button
+                  class="text-white bg-gray-400 group-hover:bg-primary-color-dark transition-all duration-700 px-5 py-2 shadow-xl rounded-l-full rounded-r-full"
+                >
+                  View availability
+                </button>
+              </div>
+            </div>
           </div>
         </div>
         <div class="swiper-pagination"></div>
@@ -821,7 +987,7 @@
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
-    <!-- Initialize Swiper -->
+    <!--  Swiper 1 -->
     <script>
       var swiper = new Swiper(".mySwiper", {
         speed: 600,
@@ -833,10 +999,26 @@
       });
     </script>
 
+    <!--  Swiper 2 -->
+
     <script>
       var swiper = new Swiper(".swiper2", {
         slidesPerView: 3,
         spaceBetween: 30,
+        breakpoints: {
+          100: {
+            slidesPerView: 2,
+            spaceBetween: 20,
+          },
+          768: {
+            slidesPerView: 2,
+            spaceBetween: 40,
+          },
+          1024: {
+            slidesPerView: 3,
+            spaceBetween: 50,
+          },
+        },
         pagination: {
           el: ".swiper-pagination",
           clickable: true,
