--- a/index.html
+++ b/index.html
@@ -717,11 +717,11 @@
         <h1 class="text-4xl font-bold">TOP VALUES FOR YOU</h1>
         <img class="w-64" src="images/friend.svg" alt="" />
       </div>
-      <div class="flex flex-wrap gap-5 justify-center my-24">
+      <div class="flex flex-wrap gap-5 justify-center items-center my-24">
         <div
-          class="group bg-gradient-to-b from-teal-100 hover:bg-teal-200 rounded-2xl p-10"
+          class="group bg-gradient-to-b from-teal-200 hover:bg-teal-300 rounded-2xl p-10"
         >
-          <img class="w-64" src="images/outdoor.svg" alt="" />
+          <img class="w-64" src="images/tree.svg" alt="" />
           <h3
             class="group-hover:text-primary-color-dark text-center font-bold text-2xl mb-5"
           >
@@ -730,9 +730,9 @@
           <p class="w-64 text-center">Lorem</p>
         </div>
         <div
-          class="mt-5 group bg-gradient-to-b from-teal-100 hover:bg-teal-200 rounded-2xl p-10"
+          class="mt-16 group bg-gradient-to-b from-teal-200 hover:bg-teal-300 rounded-2xl p-10"
         >
-          <img class="w-64" src="images/mountain.svg" alt="" />
+          <img class="w-64" src="images/tree.svg" alt="" />
           <h3
             class="group-hover:text-primary-color-dark text-center font-bold text-2xl mb-5"
           >
@@ -741,7 +741,7 @@
           <p class="w-64 text-center">Lorem</p>
         </div>
         <div
-          class="mt-10 group bg-gradient-to-b from-teal-100 hover:bg-teal-200 rounded-2xl p-10"
+          class="mt-32 group bg-gradient-to-b from-teal-200 hover:bg-teal-300 rounded-2xl p-10"
         >
           <img class="w-64" src="images/tree.svg" alt="" />
           <h3
@@ -1019,10 +1019,10 @@
             spaceBetween: 50,
           },
         },
-        pagination: {
-          el: ".swiper-pagination",
-          clickable: true,
-        },
+        // pagination: {
+        //   el: ".swiper-pagination",
+        //   clickable: true,
+        // },
       });
     </script>
 
